--- a/general.css
+++ b/general.css
@@ -92,6 +92,38 @@ header{
     background-size: cover;
     position: relative
 }
+
+form{
+    text-align: center;
+}
+
+.form-field{
+    font-size: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.form-field input{
+    width: 300px;
+    height: 30px;
+    margin-left:10px;
+    padding-left: 15px;
+}
+.form-field input[type="radio"]{
+   margin-right:-100px;
+   margin-left: 0px; 
+   padding-left: 0px; 
+}
+
+.form-field textarea{
+    
+}
+
+.form-field select{
+    width: 300px;
+    height: 30px;
+}
+
+
     
 
 
